# MCP-Client-Bridge

./: README.md  mcp-client.py  pyproject.toml
mcp_client_bridge/: __main__.py
