[project]
name = "mcp-client-bridge"
version = "0.1.0"
description = "Bridge client for MCP (SSE)"
authors = [{ name = "Paul Wilhelm", email = "shredengineer@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mcp",
]

[project.scripts]
mcp-client-bridge = "mcp_client_bridge.__main__:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_client_bridge"]
